--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>HI</title>
 </head>
 <body>
-    <a href="Photo_Editor/templates/index.html">Photo Editor Website</a>
+    <a href="https://ahmedsaed.github.io/Photo-Editor-Website/">Photo Editor Website</a>
 </body>
 </html>
