Update Under construction theme

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HI</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
-<body>
-    <a href="https://ahmedsaed.github.io/Photo-Editor-Website/">Photo Editor Website</a>
+<body class="bgimg">
+    <div>
+        <div class="middle">
+            <hr>
+            <b><p id="demo">35 days</p></b>
+        </div>
+        <div class="middleleft">
+            <h4>Projects:</h1>
+            <a href="https://ahmedsaed.github.io/Photo-Editor-Website/"><b>Photo Editor Website</b></a>
+        </div>
+        <div class="bottomright">
+            <p><b style="text-align: center;">Ahmed Saed</b></p>
+        </div>
+      </div>
+      <script src="static/script.js"></script>
 </body>
 </html>
