--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HI</title>
-    <link rel="stylesheet" href="static/styles.css">
-</head>
-<body class="bgimg">
-    <div>
-        <div class="middle">
-            <hr>
-            <b><p id="demo">35 days</p></b>
-        </div>
-        <div class="middleleft">
-            <h4>Projects:</h1>
-            <a href="https://ahmedsaed.github.io/Photo-Editor-Website/"><b>Photo Editor Website</b></a>
-        </div>
-        <div class="bottomright">
-            <p><b style="text-align: center;">Ahmed Saed</b></p>
-        </div>
-      </div>
-      <script src="static/script.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet"><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.c91ae323.js"></script><link href="/static/css/main.3cc85070.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
